
package com.minacontrol.turnos.exception;

public class AsignacionTurnoInvalidaException extends RuntimeException {
    public AsignacionTurnoInvalidaException(String message) {
        super(message);
    }
}
