
package com.minacontrol.turnos.exception;

public class RegistroAsistenciaInvalidoException extends RuntimeException {
    public RegistroAsistenciaInvalidoException(String message) {
        super(message);
    }
}
