
package com.minacontrol.turnos.exception;

public class TurnoNoEncontradoException extends RuntimeException {
    public TurnoNoEncontradoException(String message) {
        super(message);
    }
}
